public/css/main/main.css
main {
  width: 90vw;
  margin: 50px auto;
}

main > h2 {
  font-size: 24px;
  color: var(--gris-oscuro);
  margin-left: 10px;
  max-width: 1200px;
  margin: 0 auto;
}
main > section {
  margin-top: 40px;
  margin-bottom: 40px;
  max-width: 1200px;
  margin: 0 auto;
  display: flex;
  flex-direction: column;
  align-items: center;
}

main section article {
  /* text-align: center; */
  margin: 10px;
  background-color: #fff;
  border-radius: 10px;
  overflow: hidden;
}

main section article img {
  width: 100%;
  height: 50%;
  max-height: 450px;
  max-width: 450px;
}

main section article > div {
  position: relative;
}
main section article > div {
  border-top: 1px solid #ebebeb;
  padding: 15px;
}

main section article .precio-container {
  display: flex;
}

main section article .precios {
  font-size: 18px;
  color: var(--verde);
  width: 30%;
}

main section article .descuentos {
  color: var(--gris-oscuro);
  width: 70%;
  text-align: end;
}

main section .descuentos,
li > h5 {
  font-size: 16px;
}

main section article i {
  display: block;
  font-size: 16px;
  padding: 5px;
  width: 30px;
  height: 30px;
  border: 1px solid #39b54a;
  background-color: #fff;
  border-radius: 50%;
  position: absolute;
  right: 20px;
  bottom: 5px;
}
@media (min-width: 361px) {
  main > section {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
  }
  main section article {
    max-width: 40%;
    transition: box-shadow 0.2s ease;
    transition: all 0.2s ease-in-out;
  }
  main section article:hover {
    box-shadow: 0px 0px 10px rgb(100, 100, 100);
    transform: scale(1.05);
  }
}

@media (min-width: 769px) {
  main section article {
    max-width: 20%;
  }
}

